2012-05-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c term/estimate.trm:  Rename utf8_strlen to utf8_strwidth
	to avoid name collision.

2012-05-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c(set_command) src/command.c(do_command):  Test for empty
	iteration loop in "set for ..." and "do for ..." commands.

2012-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Prevent illegal characters from being generated as 
	subplot ids if there are more than 30 subplots in a multiplot.

2012-04-26  Jon Oddie  <joddie@users.sourceforge.net>

	* docs/doc2texi.c: Two bug fixes
	Cleaner code to determine which term files to read in d2t-get-terminals.
	Fix code for uniquifying duplicate node names.

	* configure.in docs/Makefile.in docs/doc2texi.c:
	Create an Emacs Lisp file of documentation strings extracted from the
	syntax descriptions in gnuplot.doc. Gnuplot-mode can then optionally
	display these strings as automatic one-line documentation while editing,

2012-04-24  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.trm:  Clip images to bounding box. Reset line type
	at the start of each plot.

2012-04-20  Michael Reeves  <mgreeves@users.sourceforge.net>

	* src/graphics.c: Improved calculation of the margin space needed to
	hold rotated x and x2 tic labels.  backported fix for Bug #3482491

2012-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm: backport recent changes (UTF-8 character set,
	precision of point coordinates).

2012-04-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: The svg code refers to CANVAS_OVERSAMPLE when it should
	refer to SVG_SCALE.  Fortunately they both equal 10.

2012-04-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (load_file):  If the input file did not end in a newline,
	the test for balanced {} occurred too early, causing a false error if
	the final partial line did in fact contain the required }.
	Bug #3518476
