@@ -1,5 +1,5 @@
 /*
- * $Id: util.h,v 1.35 2011/11/01 18:52:49 sfeam Exp $
+ * $Id: util.h,v 1.36 2011/11/10 05:15:58 sfeam Exp $
  */
 
 /* GNUPLOT - util.h */
@@ -123,5 +123,8 @@ char *getusername __PROTO((void));
 
 TBOOLEAN contains8bit __PROTO((const char *s));
 TBOOLEAN utf8toulong __PROTO((unsigned long * wch, const char ** str));
+size_t strlen_utf8 __PROTO((const char *s));
+size_t gp_strlen __PROTO((const char *s));
+char * gp_strchrn __PROTO((const char *s, int N));
 
 #endif /* GNUPLOT_UTIL_H */
