@@ -10,6 +10,7 @@ New features, changes and fixes since gnuplot version 4.6.0
 * FIX cairo terminals sometimes lost the line segment before a polygon
 * FIX interactive toggle of multiplots in svg
 * FIX failure to balance {} if an input file did not end with a newline
+* FIX strlen() and substring operators correctly handle UTF-8
 
 
 New features, changes and fixes in gnuplot version 4.6
